[gd_scene load_steps=11 format=3 uid="uid://c04m85uipksw7"]

[ext_resource type="Script" uid="uid://c1fh0mgefjk1t" path="res://Scripts/tool_selection.gd" id="1_p2p86"]
[ext_resource type="ButtonGroup" uid="uid://dyaxp2gdqk62i" path="res://Assets/tools_buttonbar.tres" id="2_jons3"]
[ext_resource type="Texture2D" uid="uid://doco2y2ygr07w" path="res://Assets/BrushChecked.png" id="2_mpq5w"]
[ext_resource type="Texture2D" uid="uid://cymh052crlit3" path="res://Assets/BrushUnchecked.png" id="3_ygjbv"]
[ext_resource type="Texture2D" uid="uid://ccsxyjr4sms3v" path="res://Assets/EraserChecked.png" id="5_kxc3h"]
[ext_resource type="Texture2D" uid="uid://b6qinyiq7rmw4" path="res://Assets/EraserUnchecked.png" id="6_afilk"]
[ext_resource type="Texture2D" uid="uid://nutnawudl2ew" path="res://Assets/SelectionChecked.png" id="7_nwdoe"]
[ext_resource type="Texture2D" uid="uid://0siv2117xti1" path="res://Assets/SelectionUnchecked.png" id="8_rvamg"]
[ext_resource type="Texture2D" uid="uid://cerate5dt6pmx" path="res://Assets/ShapeChecked.png" id="9_xibdd"]
[ext_resource type="Texture2D" uid="uid://wc57wgpt6ecd" path="res://Assets/ShapeUnchecked.png" id="10_eswl2"]

[node name="tool_selection" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -178.0
offset_top = -75.0
offset_right = 178.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_p2p86")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -178.0
offset_top = -68.0
offset_right = 178.0
grow_horizontal = 2
grow_vertical = 0

[node name="paintBrush" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
theme_override_icons/radio_checked = ExtResource("2_mpq5w")
theme_override_icons/radio_unchecked = ExtResource("3_ygjbv")
button_pressed = true
button_group = ExtResource("2_jons3")

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2

[node name="eraser" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
theme_override_icons/radio_checked = ExtResource("5_kxc3h")
theme_override_icons/radio_unchecked = ExtResource("6_afilk")
button_group = ExtResource("2_jons3")

[node name="selectionTool" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
theme_override_icons/radio_checked = ExtResource("7_nwdoe")
theme_override_icons/radio_unchecked = ExtResource("8_rvamg")
button_group = ExtResource("2_jons3")

[node name="shapeTool" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
theme_override_icons/radio_checked = ExtResource("9_xibdd")
theme_override_icons/radio_unchecked = ExtResource("10_eswl2")
button_group = ExtResource("2_jons3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(0.215686, 0.215686, 0.215686, 0.737255)
layout_mode = 1
anchors_preset = -1
anchor_top = -1.027
anchor_right = 0.986
offset_left = 1.0
offset_top = 20.025
offset_right = -0.0160217
offset_bottom = 8.0

[node name="WidthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Width"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 25)
layout_mode = 2
min_value = 1.0
max_value = 200.0
value = 10.0
rounded = true
allow_greater = true
tick_count = 1
ticks_on_borders = true

[node name="WidthNumber" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[connection signal="pressed" from="HBoxContainer/paintBrush" to="." method="_on_pressed" binds= ["paint"]]
[connection signal="pressed" from="HBoxContainer/eraser" to="." method="_on_pressed" binds= ["eraser"]]
[connection signal="pressed" from="HBoxContainer/selectionTool" to="." method="_on_pressed" binds= ["selection"]]
[connection signal="pressed" from="HBoxContainer/shapeTool" to="." method="_on_pressed" binds= ["shape"]]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/HSlider" to="." method="_on_h_slider_gui_input"]
